<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_story"
            android:icon="@drawable/ic_list_24"
            android:title="Daftar Cerita" />
        <item
            android:id="@+id/nav_add_story"
            android:icon="@drawable/ic_add_24"
            android:title="Tambah Cerita" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map"
            android:title="Map"
            />
    </group>

    <item android:title="Aksi Lainnya">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_24"
                android:title="Logout" />
            <item
                android:id="@+id/nav_language_settings"
                android:icon="@drawable/ic_language_24"
                android:title="Pengaturan Bahasa" />
        </menu>
    </item>
</menu>
