<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="normal_map">Normal</string>
    <string name="satellite_map">Satelit</string>
    <string name="terrain_map">Terrain</string>
    <string name="hybrid_map">Hibrida</string>

    <string name="location_toggle">Sertakan Lokasi</string>
    <string name="story_description">Deskripsi Cerita</string>
    <string name="upload">Unggah</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="no_location">Lokasi tidak ditemukan</string>
    <string name="retry">Coba Lagi</string>
    <string name="error_loading_stories">Gagal memuat cerita</string>
    <string name="list_story_title">Daftar Cerita</string>
    <string name="no_stories_found">Tidak ada cerita ditemukan.</string>
    <string name="maps">Peta</string>

</resources>